--- a/nlz-utils/Chart.yaml
+++ b/nlz-utils/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: A Helm chart for Kubernetes to be Nerdalize ready
 name: nlz-utils
-version: 0.1.0
+version: 0.1.1
