--- a/nlz-utils/values.yaml
+++ b/nlz-utils/values.yaml
@@ -49,3 +49,20 @@ flexVolume:
     path: /flexmnt
     name: flexvolume-mount
     hostPath: /var/lib/kubelet/volumeplugins/
+
+  clusterRoleBindings:
+  - name: flexvolume
+    subject:
+      kind: ServiceAccount
+      name: default
+    role:
+      kind: ClusterRole
+      name: clusterrole-flexvolume
+  - name: blabla
+    subject:
+      kind: ServiceAccount
+      name: default
+    role:
+      kind: ClusterRole
+      name: "system:serviceaccount:{{ .Release.Namespace }}:default"
+
