--- a/nlz-utils/templates/flexvolume-clusterrolebinding.yaml
+++ b/nlz-utils/templates/flexvolume-clusterrolebinding.yaml
@@ -3,7 +3,7 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ .Release.Name }}-clusterrolebinding-flexvolume
+  name: {{{{ .Release.Name }}-clusterrolebinding-flexvolume}}
   labels:
     chart: {{ template "nlz-utils.chart" $ }}
     release: {{ $.Release.Name }}
