--- a/nlz-utils/values.yaml
+++ b/nlz-utils/values.yaml
@@ -57,8 +57,8 @@ flexVolume:
       name: default
     role:
       kind: ClusterRole
-      name: clusterrole-flexvolume
-  - name: blabla
+      name: "{{ .Release.Name }}-clusterrole-flexvolume"
+  - name: defaultserviceaccount
     subject:
       kind: ServiceAccount
       name: default
