--- a/nlz-utils/templates/flexvolume-clusterrolebinding.yaml
+++ b/nlz-utils/templates/flexvolume-clusterrolebinding.yaml
@@ -1,18 +1,13 @@
-{{- range .Values.flexVolume.clusterRoleBindings }}
----
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{{{ .Release.Name }}-clusterrolebinding-flexvolume}}
-  labels:
-    chart: {{ template "nlz-utils.chart" $ }}
-    release: {{ $.Release.Name }}
-    heritage: {{ $.Release.Service }}
+  name: {{ .Release.Name }}-clusterrolebinding-flexvolume
 subjects:
-- kind: {{ .subject.kind }}
-  name: {{ .subject.name }}
+- kind: ServiceAccount
+  namespace: {{ .Release.Namespace }}
+  name: default
+  apiGroup:
 roleRef:
-  kind: {{ .role.kind }}
-  name: {{ .role.name }}
+  kind: ClusterRole
+  name: {{ .Release.Name }}-clusterrole-flexvolume
   apiGroup: rbac.authorization.k8s.io
-{{- end }}
