--- a/nlz-utils/Chart.yaml
+++ b/nlz-utils/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
 description: A Helm chart for Kubernetes to be Nerdalize ready (with flexvolumes and datasets)
-name: Nerdalize Utilities
+name: nlz-utils
 version: 0.1.2
