--- a/templates/kube-system-default.yaml
+++ b/templates/kube-system-default.yaml
@@ -1,12 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  annotations:
-    audit2rbac.liggitt.net/version: v0.5.0
-  labels:
-    audit2rbac.liggitt.net/generated: "true"
-    audit2rbac.liggitt.net/user: system-serviceaccount-kube-system-default
-  name: audit2rbac:system:serviceaccount:kube-system:default
+  name: system:serviceaccount:kube-system:default
 rules:
 - apiGroups:
   - batch
@@ -25,21 +20,4 @@ rules:
   - get
   - list
   - watch
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  annotations:
-    audit2rbac.liggitt.net/version: v0.5.0
-  labels:
-    audit2rbac.liggitt.net/generated: "true"
-    audit2rbac.liggitt.net/user: system-serviceaccount-kube-system-default
-  name: audit2rbac:system:serviceaccount:kube-system:default
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: audit2rbac:system:serviceaccount:kube-system:default
-subjects:
-- kind: ServiceAccount
-  name: default
-  namespace: kube-system
+ 
