--- a/templates/kube-system-default-clusterrolebinding.yaml
+++ b/templates/kube-system-default-clusterrolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: system:serviceaccount:kube-system:default
+  name: system:serviceaccount:default:default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:serviceaccount:kube-system:default
+  name: system:serviceaccount:default:default
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: kube-system
+  namespace: default
